--- a/settings.ini
+++ b/settings.ini
@@ -3,11 +3,11 @@
 host = github
 lib_name = src
 repo_name = COSC525-Project1
-author = drkostas
-description = Project 1 for the Deep Learning class (COSC 525). Involves the development of a FeedForward Neural Network.
-keywords = python, numpy, deep-learning, neural-network, feed-forward, multi-layer-perceptron
-user = Kostas Georgiou
-author_email = georgiou.kostas94@gmail.com
+author = drkostas, Gcantral
+description = Project 1 for the Deep Learning class (COSC 525). Involves the development of a Neural Network.
+keywords = python, numpy, deep-learning, neural-network, feed-forward, multi-layer-perceptron, gradient-descent
+user = Kostas Georgiou, Greg Cantrall
+author_email = kgeorgio@vols.utk.edu, gcantral@vols.utk.edu
 copyright = apache2
 branch = master
 version = 1.0.0
