Replaced Project 1 with Project 2 over the project files

--- a/settings.ini
+++ b/settings.ini
@@ -2,9 +2,9 @@
 # All sections below are required unless otherwise specified
 host = github
 lib_name = src
-repo_name = COSC525-Project1
+repo_name = COSC525-Project2
 author = drkostas, Gcantral
-description = Project 1 for the Deep Learning class (COSC 525). Involves the development of a Neural Network.
+description = Project 2 for the Deep Learning class (COSC 525). Involves the development of a Convolutional Neural Network.
 keywords = python, numpy, deep-learning, neural-network, feed-forward, multi-layer-perceptron, gradient-descent
 user = Kostas Georgiou, Greg Cantrall
 author_email = kgeorgio@vols.utk.edu, gcantral@vols.utk.edu
