--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@ lib_name = src
 repo_name = COSC525-Project2
 author = drkostas, Gcantral
 description = Project 2 for the Deep Learning class (COSC 525). Involves the development of a Convolutional Neural Network.
-keywords = python, numpy, deep-learning, neural-network, feed-forward, multi-layer-perceptron, gradient-descent
+keywords = python, numpy, deep-learning, neural-network, convolutional, cnn, multi-layer-perceptron, gradient-descent
 user = Kostas Georgiou, Greg Cantrall
 author_email = kgeorgio@vols.utk.edu, gcantral@vols.utk.edu
 copyright = apache2
